# High_Performance_Server

./: CMakeLists.txt  README.md
codes_in_book/13/: 13-4shm_talk_server.cpp
mycode/: 13.5_sem_IPC_PRIVATE.cpp  14.5_thread_signal.cpp  5.10_so_sndbuf.cpp  5.11_so_rcvbuf.cpp  5.12.1_gethostbyname.cpp  5.12.2_getaddrinfo.cpp  5.12_daytime_service.cpp  5.1_byte_order.cpp  5.2_ipaddr_transform.cpp  5.4_socket_listen_backlog.cpp  5.5_socket_accept.cpp  5.6_send_oob_data.cpp  5.7_receive_oob_data.cpp  6.0_pipe.cpp  7.1_logtest.cpp  9.1_select.cpp  debug.cpp
mycode/11.2_linklist_timer/: 11.2_client.cpp  list_timer.h  nonactive_connection.cpp
mycode/13.6_shm_chatting_room/: chatting_room_client.cpp  shm_server.cpp
mycode/6.1_dup/: client.cpp  server.cpp
mycode/6.3_sendfile/: debug.cpp  sendfile_client.cpp  sendfile_server.cpp
mycode/6.4_splice/: splice_client.cpp  splice_server.cpp
mycode/9.5_unblock_connect/: server.cpp  unblock_connect_client.cpp
mycode/9.6_chatting_room/: chatting_room_server.cpp
mycode/9.7_multi_port_manage/: manage_multi_port_server.cpp  tcp_udp_client.cpp
mycode/locker/: locker.h
mycode/processpool/: cgi_client.cpp  cgi_conn.h  cgi_test.cpp  main.cpp  processpool.h
mycode/threadpool/: http_client.cpp  http_conn.cpp  http_conn.h  main.cpp  threadpool.h
